--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
              </label>
             </td>
             <td>
-            <input type="text" placeholder="-enter name" id="name" name="one">
+            <input type="text" placeholder="Enter the name" id="name" name="one">
             </td>
             <td><label for="ten"><span>10th percentage(%):-</span></label></td>       
-            <td><input type="number" name="six" id="ten" placeholder="-enter tenth mark"></td>  
+            <td><input type="number" name="six" id="ten" placeholder="10th Percentage"></td>  
 
         </tr>
         <tr>
@@ -34,10 +34,10 @@
                 </label>
             </td>
             <td>
-            <input type="email" id="mail" placeholder="-enter mail" name="two">
+            <input type="email" id="mail" placeholder="email" name="two">
             </td>
             <td><label for="twelve"><span>12th percentge(%):-</span></label></td>       
-            <td><input type="number" name="seven" id="twelve" placeholder="-enter twelth mark"></td>     
+            <td><input type="number" name="seven" id="twelve" placeholder="12th Percentage"></td>     
         </tr>
         <tr>
             <td>
@@ -48,7 +48,7 @@
             </label>
             </td>
             <td>
-                <textarea name="three" id="address" cols="21" rows="5" placeholder="-enter address"></textarea>
+                <textarea name="three" id="address" cols="21" rows="5" placeholder="Address"></textarea>
             </td>  
             <td> <label for="data"> <span>Date Of Birth:-</span></label> </td>
             <td><input type="date" name="e" id="data"></td>      
@@ -58,18 +58,18 @@
                 <label for="num"><span>Register Number:-</span>
                 </label>
             </td>      
-            <td><input type="number" name="four" id="num" placeholder="-enter register number"></td>  
+            <td><input type="number" name="four" id="num" placeholder="Register number"></td>  
             <td> <label for="nation"><span>Nationality:-</span></label> </td>
-            <td><input type="text" name="nine" id="nation"></td>      
+            <td><input type="text" name="nine" id="nation" placeholder="Nationality"></td>      
         </tr>
         <tr>           
             <td>
                 <label for="num1">
                     <span>Mobile Number:-</span>
                 </label></td>   
-            <td><input type="tel" name="five" id="num1" placeholder="-mobile number"></td>
+            <td><input type="tel" name="five" id="num1" placeholder="Mobile number"></td>
             <td><label for="reli">Religion:-</label></td>
-            <td><input type="text" name="ten" id="reli"></td>   
+            <td><input type="text" name="ten" id="reli" placeholder="Religion"></td>   
         </tr> 
     </table>
     <br>
@@ -77,6 +77,5 @@
 </form>
 </center>
 </fieldset>
-
 </body>
 </html>
